fix(material/form-field): input placeholder not hidden in high contrast mode
Fixes that the placeholder was showing up behind the label in high contrast mode.

--- a/src/material/form-field/form-field-input.scss
+++ b/src/material/form-field/form-field-input.scss
@@ -128,6 +128,12 @@
       // Remove the transition to prevent the placeholder
       // from overlapping when the label comes back down.
       transition: none;
+
+      @include a11y.high-contrast(active, off) {
+        // In high contrast mode the browser will render the
+        // placeholder despite the `color: transparent` above.
+        opacity: 0;
+      }
     }
   }
 }
